# dvsa-kngr

./: pyproject.toml
data/: main.py
