[tool.poetry]
name = "data"
version = "0.1.0"
description = ""
authors = ["clpi <chrisp1877@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3.0.3"
nltk = "^3.5"
neuralcoref = "^4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
